--- a/src/components/form/editableButtons.html
+++ b/src/components/form/editableButtons.html
@@ -1,12 +1,13 @@
 <div class="top-actions">
   <model-language-chooser></model-language-chooser>
-  <button type="button" class="btn btn-default right" ng-click="editableController.cancelEditing()" ng-show="editableController.isEditing()" translate>Cancel edit</button>
-  <button type="button" class="btn btn-default right" ng-click="editableController.saveEdited()" ng-show="editableController.isEditing()" translate>Save changes</button>
-  <button type="button" class="btn btn-default right" ng-click="editableController.edit()" ng-show="editableController.canEdit()" translate>Edit</button>
+  <button type="button" class="btn btn-default right" ng-click="ctrl.cancelEditing()" ng-show="ctrl.isEditing()" translate>Cancel edit</button>
+  <button type="button" class="btn btn-default right" ng-click="ctrl.saveEdited()" ng-show="ctrl.isEditing()" translate>Save changes</button>
+  <button type="button" class="btn btn-default right" ng-click="ctrl.edit()" ng-show="ctrl.canEdit()" translate>Edit</button>
+  <button type="button" class="btn btn-default right" ng-click="ctrl.removeEdited()" ng-show="ctrl.canRemove()">{{'Delete ' + ctrl.getEditable().type | translate}}</button>
 
   <ng-transclude></ng-transclude>
 
-  <div class="alert alert-danger" role="alert" ng-show="editableController.submitError">
+  <div class="alert alert-danger" role="alert" ng-show="ctrl.submitError">
     <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
     <span translate>Save failed</span>
   </div>
