--- a/src/components/model/propertyView.html
+++ b/src/components/model/propertyView.html
@@ -1,7 +1,7 @@
 <div>
 
   <div class="top-actions">
-    <button ng-show="selectionViewController.canModify()" type="button" class="btn btn-default right" ng-click="selectionViewController.removeProperty(property)" translate>Delete property</button>
+    <button ng-show="editableController.canModify()" type="button" class="btn btn-default right" ng-click="editableController.removeProperty(property)" translate>Delete property</button>
   </div>
 
   <editable title="Name"><input name="Name" class="form-control" type="text" localized-input ng-model="property.label" /></editable>
