--- a/src/components/model/requiresView.html
+++ b/src/components/model/requiresView.html
@@ -2,10 +2,8 @@
 
 <uib-accordion>
   <uib-accordion-group ng-repeat="require in requires" is-open="isOpen[require.id]">
-    <uib-accordion-heading>{{require.title | translateValue}}
-      <span class="pull-right glyphicon"
-            ng-class="{'glyphicon-chevron-down': isOpen[require.id], 'glyphicon-chevron-right': !isOpen[require.id]}">
-      </span>
+    <uib-accordion-heading>
+      <span accordion-chevron is-open="isOpen[require.id]">{{require.title | translateValue}}</span>
     </uib-accordion-heading>
     <div class="model-view__title" translate>Preferred namespace</div>
     <div>{{require.namespace}}</div>
