--- a/src/components/model/classForm.html
+++ b/src/components/model/classForm.html
@@ -1,12 +1,8 @@
 <editable title="Label"><input name="Label" class="form-control" type="text" localized-input ng-model="class.label"/></editable>
 <editable title="Id"><input name="Id" class="form-control" type="text" id-input ng-model="class.curie" /></editable>
 <editable title="Comment"><textarea name="Comment" class="form-control" localized-input ng-model="class.comment"></textarea></editable>
-<div ng-show="class.subClassOf">
-  <div class="model-view__title" translate>Superclass</div>
-  <div>{{class.subClassOf}}</div>
-</div>
-<div class="model-view__title" translate>Is defined by</div>
-<div>{{class.modelId}}</div>
+<non-editable title="Superclass" value="class.subClassOf"></non-editable>
+<non-editable title="Is defined by" value="class.modelId"></non-editable>
 <editable title="State" value-as-localization-key="true"><state-select state="class.state"></state-select></editable>
 <editable-subject-select references="references" type="class" subject="class.subject"></editable-subject-select>
 
