--- a/src/components/model/editableSubjectSelect.html
+++ b/src/components/model/editableSubjectSelect.html
@@ -3,18 +3,9 @@
     <div class="model-view__title" translate>Subject</div>
     <div ng-hide="ctrl.subject" translate>Not defined</div>
     <div class="model-view__sub">
-      <div ng-show="ctrl.subject.id">
-        <div class="model-view__title" translate>Id</div>
-        <a href="{{ctrl.subject.id}}" target="_blank">{{ctrl.subject.id}}</a>
-      </div>
-      <div ng-show="ctrl.subject.label">
-        <div class="model-view__title" translate>Label</div>
-        <div>{{ctrl.subject | translateLabel}}</div>
-      </div>
-      <div ng-if="ctrl.subject.comment">
-        <div class="model-view__title" translate>Comment</div>
-        <div>{{ctrl.subject.comment | translateValue}}</div>
-      </div>
+      <non-editable title="Id" value="ctrl.subject.id" link-new-window="ctrl.subject.id"></non-editable>
+      <non-editable title="Label" value="ctrl.subject.label"></non-editable>
+      <non-editable title="Comment" value="ctrl.subject.comment"></non-editable>
     </div>
     <div ng-class="{'model-view__sub': ctrl.subject}">
       <button ng-show="formController.editing" type="button" class="btn btn-default btn-sm" ng-click="ctrl.selectSubject()" translate>Choose subject</button>
