--- a/src/components/model/predicateForm.html
+++ b/src/components/model/predicateForm.html
@@ -3,7 +3,6 @@
 <editable title="Comment"><textarea name="Comment" class="form-control" localized-input ng-model="predicate.comment"></textarea></editable>
 <editable title="Range" name="Range" ng-if="predicate.isAttribute()"><range-select range="predicate.range"></range-select></editable>
 <editable title="Value class" name="Value class" ng-if="predicate.isAssociation()"><class-select class-name="predicate.range"></class-select></editable>
-<div class="model-view__title" translate>Is defined by</div>
-<div>{{predicate.modelId}}</div>
+<non-editable title="Is defined by" value="predicate.modelId"></non-editable>
 <editable title="State" value-as-localization-key="true"><state-select state="predicate.state"></state-select></editable>
 <editable-subject-select references="references" type="predicate" subject="predicate.subject"></editable-subject-select>
