--- a/src/components/model/propertyView.html
+++ b/src/components/model/propertyView.html
@@ -1,9 +1,5 @@
 <div>
-
-  <div class="top-actions">
-    <button ng-show="editableController.canModify()" type="button" class="btn btn-default right" ng-click="editableController.removeProperty(property)" translate>Delete property</button>
-  </div>
-
+  <button ng-show="editableController.canModify()" type="button" class="btn btn-default pull-right" ng-click="editableController.removeProperty(property)" translate>Delete property</button>
   <editable title="Name"><input name="Name" class="form-control" type="text" localized-input ng-model="property.label" /></editable>
   <editable title="Comment"><textarea name="Comment" class="form-control" localized-input ng-model="property.comment"></textarea></editable>
   <editable title="Example"><input name="Example" class="form-control" type="text" localized-input ng-model="property.example" /></editable>
