--- a/src/components/model/referencesView.html
+++ b/src/components/model/referencesView.html
@@ -5,9 +5,7 @@
     <uib-accordion-heading>
       <span accordion-chevron is-open="isOpen[reference.id]">{{reference.title | translateValue}}</span>
     </uib-accordion-heading>
-    <div class="top-actions">
-      <button ng-show="modelViewController.canModify()" type="button" class="btn btn-default right" ng-click="modelViewController.removeReference(reference)" translate>Delete reference</button>
-    </div>
+    <button ng-show="modelViewController.canModify()" type="button" class="btn btn-default pull-right" ng-click="modelViewController.removeReference(reference)" translate>Delete reference</button>
     <non-editable title="Id" value="reference.vocabularyId"></non-editable>
   </uib-accordion-group>
 </uib-accordion>
