--- a/src/app.scss
+++ b/src/app.scss
@@ -185,7 +185,7 @@
       cursor: pointer;
       background-color: #f5f5f5;
       border: 1px solid #ddd;
-      margin-top: 10px;
+      margin-bottom: 10px;
       padding-left: 10px;
 
       &.selected {
