--- a/src/components/model/modelView.html
+++ b/src/components/model/modelView.html
@@ -6,6 +6,7 @@
   <div uib-collapse="!ctrl.visible" class="model-editable-content">
 
     <editable-buttons editable-controller="ctrl">
+      <button type="button" class="btn btn-default right" ng-click="ctrl.addRequire()" ng-show="ctrl.canModify()" translate>Add require</button>
       <button type="button" class="btn btn-default right" ng-click="ctrl.addReference()" ng-show="ctrl.canModify()" translate>Add reference</button>
     </editable-buttons>
 
