--- a/src/components/editor/selectionView.html
+++ b/src/components/editor/selectionView.html
@@ -1,7 +1,7 @@
 <div class="col-md-7">
   <div class="component">
     <div class="component-header">
-      <h3><span ng-class="editableController.getEditable().glyphIconClass()"></span> <span>{{editableController.getEditable() | translateLabel}}</span></h3>
+      <h3><span ng-class="editableController.getEditable().glyphIconClass"></span> <span>{{editableController.getEditable() | translateLabel}}</span></h3>
     </div>
 
     <editable-buttons editable-controller="editableController" float preserve-parent-width="true">
