--- a/src/components/form/modelLanguageChooser.html
+++ b/src/components/form/modelLanguageChooser.html
@@ -1,5 +1,5 @@
 <p class="left button-label text"></p>
-<div class="btn-group left" uib-dropdown is-open="status.isopen">
+<div class="btn-group left" uib-dropdown is-open="status.isOpen">
   <button id="single-button" type="button" class="btn btn-default" uib-dropdown-toggle ng-disabled="disabled">
     {{'data ' + currentLanguage() | translate}} <span class="caret"></span>
   </button>
