--- a/src/components/model/requiresView.html
+++ b/src/components/model/requiresView.html
@@ -1,9 +1,9 @@
 <h4 translate>Requires</h4>
 
 <uib-accordion>
-  <uib-accordion-group ng-repeat="require in requires" is-open="isOpen[require.id]">
+  <uib-accordion-group ng-repeat="require in requires" is-open="isOpen[require]">
     <uib-accordion-heading>
-      <span accordion-chevron is-open="isOpen[require.id]">{{require | translateLabel}}</span>
+      <span accordion-chevron is-open="isOpen[require]">{{require | translateLabel}}</span>
     </uib-accordion-heading>
     <button ng-show="modelViewController.canModify()" type="button" class="btn btn-default pull-right" ng-click="modelViewController.removeRequire(require)" translate>Delete require</button>
     <editable title="Label"><input type="text" class="form-control" localized-input ng-model="require.label" /></editable>
