Correct transclude slot name

--- a/src/components/editor/selectionView.html
+++ b/src/components/editor/selectionView.html
@@ -4,7 +4,7 @@
       <h3><span ng-class="editableController.getEditable().glyphIconClass"></span> <span>{{editableController.getEditable() | translateLabel}}</span></h3>
     </div>
 
-    <editable-buttons editable-controller="editableController" float preserve-parent-width="true">
+    <editable-buttons editable-controller="editableController" float preserve-parent-width="true" class="clearfix">
       <div ng-transclude="buttons"></div>
     </editable-buttons>
 
