Link to predicate

--- a/src/components/editor/propertyView.html
+++ b/src/components/editor/propertyView.html
@@ -14,6 +14,7 @@
       <non-editable title="Comment" value="ctrl.predicate.comment"></non-editable>
       <non-editable title="Type" value="ctrl.predicate.owlType"></non-editable>
       <non-editable title="Range" value="ctrl.predicate.range"></non-editable>
+      <non-editable title="Is defined by" value="ctrl.predicate.modelId" link="ctrl.predicate.iowUrl"></non-editable>
     </uib-accordion-group>
   </uib-accordion>
 </div>
