Editing super class / property implemented
Closes #133

--- a/src/components/editor/predicateForm.html
+++ b/src/components/editor/predicateForm.html
@@ -1,8 +1,9 @@
 <editable title="Label"><input name="Label" class="form-control" type="text" localized-input ng-model="predicate.label" /></editable>
-<editable title="Id"><input name="Id" type="text" id-input ng-model="predicate.curie" /></editable>
+<editable title="Id"><input name="Id" class="form-control" type="text" id-input ng-model="predicate.curie" /></editable>
 <editable title="Comment"><textarea name="Comment" class="form-control" localized-input ng-model="predicate.comment"></textarea></editable>
+<editable title="{{'Super' + predicate.type}}" name="Superproperty"><predicate-select name="Superproperty" type="predicate.type" curie="predicate.subPropertyOf"></predicate-select></editable>
 <editable title="Range" name="Range" ng-if="predicate.isAttribute()"><range-select range="predicate.range"></range-select></editable>
-<editable title="Value class" name="Value class" ng-if="predicate.isAssociation()"><class-select curie="predicate.range"></class-select></editable>
+<editable title="Value class" name="Value class" ng-if="predicate.isAssociation()"><class-select name="Value class" curie="predicate.range"></class-select></editable>
 <non-editable title="Is defined by" value="predicate.modelId" link="predicate.iowUrl"></non-editable>
 <editable title="State" value-as-localization-key="true"><state-select state="predicate.state"></state-select></editable>
 <editable-subject-select references="references" type="predicate" subject="predicate.subject"></editable-subject-select>
