--- a/src/components/editor/searchPredicateModal.html
+++ b/src/components/editor/searchPredicateModal.html
@@ -4,16 +4,17 @@
 
     <modal-body class="search-modal">
 
+      <div ng-if="!ctrl.onlySelection">
+        <button type="button" class="btn btn-default btn-md pull-right" ng-click="ctrl.createNew('owl:ObjectProperty')" ng-show="ctrl.isAssociationAddable()" style="margin-left: 10px">
+          <span class="glyphicon glyphicon-plus"></span>
+          {{'Create new association' | translate}}
+        </button>
 
-      <button type="button" class="btn btn-default btn-md pull-right" ng-click="ctrl.createNew('owl:ObjectProperty')" ng-show="ctrl.isAssociationAddable()">
-        <span class="glyphicon glyphicon-plus"></span>
-        {{'Create new association' | translate}}
-      </button>
-
-      <button type="button" class="btn btn-default btn-md pull-right" ng-click="ctrl.createNew('owl:DatatypeProperty')" ng-show="ctrl.isAttributeAddable()">
-        <span class="glyphicon glyphicon-plus"></span>
-        {{'Create new attribute' | translate}}
-      </button>
+        <button type="button" class="btn btn-default btn-md pull-right" ng-click="ctrl.createNew('owl:DatatypeProperty')" ng-show="ctrl.isAttributeAddable()">
+          <span class="glyphicon glyphicon-plus"></span>
+          {{'Create new attribute' | translate}}
+        </button>
+      </div>
 
       <div class="row">
 
