--- a/src/components/editor/classSelect.html
+++ b/src/components/editor/classSelect.html
@@ -1,2 +1,2 @@
-<input name="Value class" type="text" class="form-control" ng-model="ctrl.curie" />
+<input name="{{ctrl.name}}" type="text" class="form-control" ng-model="ctrl.curie" />
 <button ng-show="formController.editing" type="button" class="btn btn-default btn-sm" ng-click="ctrl.selectClass()" translate>Choose class</button>
